[tool.poetry]
name = "apisrun"
version = "0.0.1"
description = "Apisrun is a service that allows you to create micro-services from a dynamic structure."
authors = ["Jose Salas <josephsalas.developer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.9.2"
bandit = "^1.7.0"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
motor = "^2.5.1"
Cerberus = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
