[tool.poetry]
name = "apiruns"
version = "0.0.1"
description = "Apiruns a self-configurable api based on fastapi, it allows you to create, modify and delete resources with a simple request."
authors = ["Jose Salas <jose.salas@apiruns.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.9.2"
bandit = "^1.7.0"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
motor = {extras = ["srv"], version = "^3.0.0"}
Cerberus = "^1.3.4"
black = "^21.8b0"
pre-commit = "^2.15.0"
pytest-mock = "^3.6.1"
pytest-asyncio = "^0.15.1"
dacite = "^1.6.0"
dnspython = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
